@@ -1,3 +1,8 @@
+Sat Feb 15 11:47:47 2014  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (rb_big_cmp): Avoid bignum allocation for comparison
+	  between bignum and fixnum.
+
 Sat Feb 15 10:55:12 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>
 
 	* ext/-test-/win32/fd_setsize/depend: fix wrong dependencies.
